--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
                                 Implemented effective data management strategies and user-friendly interfaces, resulting in positive user feedback.</p>
                         </div>
                     </div>
-                    <hr class="color">
-                    <div class="maindiv">
-                        <!-- <div class="containt mt-5">
+                    <!-- <hr class="color"> -->
+                    <!-- <div class="maindiv">
+                        <div class="containt mt-5">
                             <span class="date">2017-2021</span>
                             <h1 class="degree">Bachelors Of Science In Information & Technology</h1>
                             <span class="instit">Model College</span>
                             <p class="conttext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ipsam sequi libero laborum rem optio quibusdam ullam labore debitis fuga.</p>
-                        </div> -->
-                    </div>
+                        </div>
+                    </div> -->
                     <hr class="color">
                 </div>
             </div>
@@ -132,25 +132,25 @@
                             <p class="conttext">As a product specialist my responsibilties are design and add functionality to the product with technologies Angulsr and Frontend</p>
                         </div>
                     </div>
-                    <hr class="color">
-                    <div class="maindiv">
-                        <!-- <div class="containt mt-5">
+                    <!-- <hr class="color"> -->
+                    <!-- <div class="maindiv">
+                        <div class="containt mt-5">
                             <span class="date">2017-2021</span>
                             <h1 class="degree">Bachelors Of Science In Information & Technology</h1>
                             <span class="instit">Model College</span>
                             <p class="conttext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ipsam sequi libero laborum rem optio quibusdam ullam labore debitis fuga.</p>
-                        </div> -->
-                    </div>
+                        </div>
+                    </div> -->
                     <hr class="color">
-                    <div class="maindiv">
-                        <!-- <div class="containt mt-5">
+                    <!-- <div class="maindiv">
+                        <div class="containt mt-5">
                             <span class="date">2017-2021</span>
                             <h1 class="degree">Bachelors Of Science In Information & Technology</h1>
                             <span class="instit">Model College</span>
                             <p class="conttext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium ipsam sequi libero laborum rem optio quibusdam ullam labore debitis fuga.</p>
-                        </div> -->
-                    </div>
-                    <hr class="color">
+                        </div>
+                    </div> -->
+                    <!-- <hr class="color"> -->
                 </div>
             </div>
             <div class="row mt-4">
@@ -418,7 +418,7 @@
                         </span>
                         <div class="card-body">
                             <h3 class="d-flex justify-content-center add">Website</h3>
-                          <p class="text d-flex justify-content-center mt-2 conttext">mysite.com</p>
+                          <a href="https://my-portfolio-five-rho-96.vercel.app/"><p class="text d-flex justify-content-center mt-2 conttext">mysite.com</p></a>
                         </div>
                       </div>
                 </div>
@@ -463,7 +463,7 @@
                         <!-- <div class="form">
                             <input type="text" class="cont-inp" name="Subject" placeholder="Subject">
                         </div> -->
-                        <div class="form">
+                        <div class="form">  
                             <textarea class="cont-inp" id="message" required name="Message" id="" cols="30" rows="10">Message</textarea>
                         </div>
                             <div class="btntext mt-3">
@@ -522,15 +522,18 @@
             <div class="row">
                 <div class="col-md-12 mt-5">
                     <div class="social-icons d-flex justify-content-center">
-                        <i class="bi bi-instagram icons"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                        <a href="https://vercel.com/sainath-shitres-projects"><i class="bi bi-caret-up icons"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-caret-up" viewBox="0 0 16 16">
+                            <path d="M3.204 11h9.592L8 5.519zm-.753-.659 4.796-5.48a1 1 0 0 1 1.506 0l4.796 5.48c.566.647.106 1.659-.753 1.659H3.204a1 1 0 0 1-.753-1.659"/>
+                          </svg></i></a>
+                        <!-- <i class="bi bi-instagram icons"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                             <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
-                          </svg></i>
-                          <i class="bi bi-linkedin icons "><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                          </svg></i> -->
+                          <a href="https://www.linkedin.com/in/sainath-shitre-35b68226a"><i class="bi bi-linkedin icons "><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
-                          </svg></i>
-                          <i class="bi bi-git icons"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-git" viewBox="0 0 16 16">
+                          </svg></i></a>
+                          <a href="https://github.com/fitnessfreaksai"><i class="bi bi-git icons"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-git" viewBox="0 0 16 16">
                             <path d="M15.698 7.287 8.712.302a1.03 1.03 0 0 0-1.457 0l-1.45 1.45 1.84 1.84a1.223 1.223 0 0 1 1.55 1.56l1.773 1.774a1.224 1.224 0 0 1 1.267 2.025 1.226 1.226 0 0 1-2.002-1.334L8.58 5.963v4.353a1.226 1.226 0 1 1-1.008-.036V5.887a1.226 1.226 0 0 1-.666-1.608L5.093 2.465l-4.79 4.79a1.03 1.03 0 0 0 0 1.457l6.986 6.986a1.03 1.03 0 0 0 1.457 0l6.953-6.953a1.03 1.03 0 0 0 0-1.457"/>
-                          </svg></i>
+                          </svg></i></a>
                     </div>
                 </div>
                 <div class="col-md-12 mt-5">
