--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@
                     <h1 class="projName">Zomato</h1>
                     <div class="col-md-5">
                         <div class="proj-img d-flex justify-content-center">
-                            <img class="mob-img" src="smartmockups_lsfpgpcd.jpg" alt="">
+                            <a href="https://food-delivery-navy-nine.vercel.app"><img class="mob-img" src="smartmockups_lsfpgpcd.jpg" alt=""></a>
                         </div>
                     </div>
                     <div class="col-md-7 mt-3">
                         <div class="proj-img d-flex justify-content-center">
-                            <img class="desk-img" src="smartmockups_lsfpim22.jpg" alt="">
+                            <a href="https://food-delivery-navy-nine.vercel.app"><img class="desk-img" src="smartmockups_lsfpim22.jpg" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -315,12 +315,12 @@
                     <h1 class="projName2">Zoom Car</h1>
                     <div class="col-md-5">
                         <div class="proj-img d-flex justify-content-center">
-                            <img class="mob-img" src="smartmockups_lsfpt47u.jpg" alt="">
+                            <a href="https://zoom-car-tau.vercel.app"><img class="mob-img" src="smartmockups_lsfpt47u.jpg" alt=""></a>
                         </div>
                     </div>
                     <div class="col-md-7 mt-3">
                         <div class="proj-img d-flex justify-content-center">
-                            <img class="desk-img" src="smartmockups_lsfpkkh5.jpg" alt="">
+                            <a href="https://zoom-car-tau.vercel.app"><img class="desk-img" src="smartmockups_lsfpkkh5.jpg" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -522,7 +522,7 @@
             <div class="row">
                 <div class="col-md-12 mt-5">
                     <div class="social-icons d-flex justify-content-center">
-                        <a href="https://vercel.com/sainath-shitres-projects"><i class="bi bi-caret-up icons"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-caret-up" viewBox="0 0 16 16">
+                        <a href="https://vercel.com/sainath-shitres-projects"><i class="bi bi-caret-up icons"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-caret-up" viewBox="0 0 16 16">
                             <path d="M3.204 11h9.592L8 5.519zm-.753-.659 4.796-5.48a1 1 0 0 1 1.506 0l4.796 5.48c.566.647.106 1.659-.753 1.659H3.204a1 1 0 0 1-.753-1.659"/>
                           </svg></i></a>
                         <!-- <i class="bi bi-instagram icons"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
