Animated Contact Form added

--- a/index.html
+++ b/index.html
@@ -483,34 +483,15 @@
                 </div>
             </div>
             <div class="row mt-5 p-4">
-                <div class="col-md-6 imgback">
+                <!-- <div class="col-md-6 imgback">
                     <div class="img-about">
                         <div class="img cont-img">
                             <img class="imgself" src="selfimg.png" alt="">
                         </div>
                     </div>
-                </div>
-                <!-- <div class="col-md-6 formback">
-                    <form class="formsec mt-5">
-                        <div class="form">
-                            <input type="text" class="cont-inp" placeholder="Your name">
-                        </div>
-                        <div class="form">
-                            <input type="email" class="cont-inp" placeholder="Email">
-                        </div>
-                        <div class="form">
-                            <input type="text" class="cont-inp" placeholder="Subject">
-                        </div>
-                        <div class="form">
-                            <textarea class="cont-inp" name="" id="" cols="30" rows="10">Message</textarea>
-                        </div>
-                            <div class="btntext mt-3">
-                                <button class="butn">Submit</button>
-                            </div>
-                    </form>
                 </div> -->
 
-                <div class="col-md-6 formback">
+                <!-- <div class="col-md-6 formback">
                     <form action="https://formspree.io/f/xvoekepe" method="POST">
                         <div class="form">
                             <input type="text" id="name" class="cont-inp" required name="Name" placeholder="Your name">
@@ -518,9 +499,6 @@
                         <div class="form">
                             <input type="email" id="email" class="cont-inp" required name="Email" placeholder="Email">
                         </div>
-                        <!-- <div class="form">
-                            <input type="text" class="cont-inp" name="Subject" placeholder="Subject">
-                        </div> -->
                         <div class="form">
                             <textarea class="cont-inp" id="message" required name="Message" id="" cols="30"
                                 rows="10">Message</textarea>
@@ -529,7 +507,9 @@
                             <button class="butn">Submit</button>
                         </div>
                     </form>
-                </div>
+                </div> -->
+                <div class="visme_d" data-title="Personal Contact Form" data-url="pvmw3drw-personal-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="25662"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+
             </div>
         </div>
     </div>
