--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">About</a>
+                        <a class="nav-link" aria-current="page" href="#sect2">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Resume</a>
+                        <a class="nav-link" aria-current="page" href="#sect3">Education & Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Projects</a>
+                        <a class="nav-link" aria-current="page" href="#sect4">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Contacts</a>
+                        <a class="nav-link" aria-current="page" href="#sect5">Contacts</a>
                     </li>
                 </ul>
             </div>
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <div class="section2 about-row">
+    <div class="section2 about-row" id="sect2">
         <div class="container">
             <div class="row ">
                 <div class="col-md-6">
@@ -95,7 +95,7 @@
             </div>
         </div>
     </div>
-    <div class="section3">
+    <div class="section3" id="sect3">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -331,7 +331,7 @@
             </div>
         </div>
     </div>
-    <div class="section4-1">
+    <div class="section4-1" id="sect4">
         <div class="container">
             <div class="row row2">
                 <h1 class="service">Projects</h1>
@@ -411,7 +411,7 @@
         </div>
     </div>
 
-    <div class="section5">
+    <div class="section5" id="sect5">
         <div class="container">
             <div class="row">
                 <h1 class="service">Contact Me</h1>
@@ -482,22 +482,25 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 p-4">
-                <!-- <div class="col-md-6 imgback">
+            <div class="row mt-5 p-5">
+                <div class="col-md-6 imgback">
                     <div class="img-about">
                         <div class="img cont-img">
                             <img class="imgself" src="selfimg.png" alt="">
                         </div>
                     </div>
-                </div> -->
+                </div>
 
-                <!-- <div class="col-md-6 formback">
+                <div class="col-md-6 formback">
                     <form action="https://formspree.io/f/xvoekepe" method="POST">
                         <div class="form">
                             <input type="text" id="name" class="cont-inp" required name="Name" placeholder="Your name">
                         </div>
                         <div class="form">
                             <input type="email" id="email" class="cont-inp" required name="Email" placeholder="Email">
+                        </div>
+                        <div class="form">
+                            <input type="number" id="email" class="cont-inp" required name="Phone" placeholder="Phone No">
                         </div>
                         <div class="form">
                             <textarea class="cont-inp" id="message" required name="Message" id="" cols="30"
@@ -507,8 +510,9 @@
                             <button class="butn">Submit</button>
                         </div>
                     </form>
-                </div> -->
-                <div class="visme_d" data-title="Personal Contact Form" data-url="pvmw3drw-personal-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="25662"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+                </div>
+                <!-- <div class="visme_d animatedForm" data-title="Personal Contact Form" data-url="pvmw3drw-personal-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="25662">
+                </div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script> -->
 
             </div>
         </div>
