--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col text-center mt-5">
                     <span class="hey mb-5">HEY! I AM</span>
                     <h1 class="myName">Sainath Shitre</h1>
-                    <p class="pclass">I'm a <span class="spanclass">Developer</span></p>
+                    <p class="pclass">I'm a <span class="spanclass">Angular Developer</span></p>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                         <div class="btntext mt-3">
                             <!-- <button class="butn">DOWNLOAD CV</button> -->
                             <a
-                                href="https://drive.google.com/file/d/1QlnvyzFunOBqJ8dF_tDnSppFE77qTnIQ/view?usp=sharing"><button
+                                href="https://drive.google.com/file/d/18a2iy0hzm5iUqBouWMogHokaY5rfrfmu/view?usp=drive_link"><button
                                     class="butn">DOWNLOAD CV</button></a>
                         </div>
                     </div>
@@ -268,6 +268,34 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row mt-5">
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-6">
+                                    <P class="Skill">Git</P>
+                                </div>
+                                <div class="col-6">
+                                    <p class="Skill">75%</p>
+                                </div>
+                            </div>
+                            <div class="w3-light-grey">
+                                <div class="w3-container" style="width:85%; background-color : RGB(62, 100, 255)"></div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-6">
+                                    <P class="Skill">NodeJS</P>
+                                </div>
+                                <div class="col-6">
+                                    <p class="Skill">60%</p>
+                                </div>
+                            </div>
+                            <div class="w3-light-grey">
+                                <div class="w3-container" style="width:85%; background-color : RGB(62, 100, 255)"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -289,8 +317,7 @@
                         <div class="card-body">
                             <h3 class="head d-flex justify-content-center mt-4">Web Design</h3>
                             <hr class="line">
-                            <p class="card-text text d-flex text-center mt-4">We provide with various varieties of
-                            design in web application include Animation and Graphic design</p>
+                            <p class="card-text text d-flex text-center mt-4">We provide with various design in web application include Animation and Graphic design</p>
                         </div>
                     </div>
                 </div>
@@ -306,8 +333,7 @@
                         <div class="card-body">
                             <h3 class="head d-flex justify-content-center mt-4">Web Developement</h3>
                             <hr class="line">
-                            <p class="card-text text d-flex text-center mt-4">Some quick example text to build on the
-                                card title and make up the bulk of the card's content.</p>
+                            <p class="card-text text d-flex text-center mt-4">We provide with interactive and user friendly UI including full stack application.</p>
                         </div>
                     </div>
                 </div>
@@ -321,10 +347,9 @@
                                 </svg></i>
                         </span>
                         <div class="card-body">
-                            <h3 class="head d-flex justify-content-center mt-4">Web Design</h3>
+                            <h3 class="head d-flex justify-content-center mt-4">Video Editing</h3>
                             <hr class="line">
-                            <p class="card-text text d-flex text-center mt-4">Some quick example text to build on the
-                                card title and make up the bulk of the card's content.</p>
+                            <p class="card-text text d-flex text-center mt-4">Elevating your videos with seamless editiong, visual effects, and attention-grabbing transitions.</p>
                         </div>
                     </div>
                 </div>
@@ -335,8 +360,7 @@
         <div class="container">
             <div class="row row2">
                 <h1 class="service">Projects</h1>
-                <p class="conttextser d-flex justify-content-center">Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit. Consequuntur, beatae!</p>
+                <p class="conttextser d-flex justify-content-center">This are the some projects I have made to showcase my Experites.</p>
                 <div class="row mt-5">
                     <h1 class="projName">Zomato</h1>
                     <div class="col-md-5">
@@ -415,8 +439,6 @@
         <div class="container">
             <div class="row">
                 <h1 class="service">Contact Me</h1>
-                <p class="conttextser d-flex justify-content-center">Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit. Consequuntur, beatae!</p>
                 <div class="col-md-3">
                     <div class="card p-4 mt-3">
                         <span class="d-flex justify-content-center contact-icon"><i class="bi bi-house-fill"><svg
@@ -524,19 +546,18 @@
                 <div class="col-md-3">
                     <div class="footer-widget">
                         <h1 class="footer-head">About</h1>
-                        <p class="footer-para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus
-                            eos totam aperiam eligendi dignissimos</p>
+                        <p class="footer-para">Hello! I'm Sainath Shitre, a passionate Angular developer with 2 years of experience crafting intuitive, scalable web applications. My journey in the world of web development began with a fascination for creating seamless user experiences, and Angular has been my go-to framework for turning ideas into reality.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="footer-widget">
                         <h1 class="footer-head links">Links</h1>
                         <ul class="unor">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
+                            <li><a href="#sect2">Home</a></li>
+                            <li><a href="#sect2">About</a></li>
+                            <li><a href="#sect3">Education & Experience</a></li>
+                            <li><a href="#sect4">Projects</a></li>
+                            <li><a href="#sect5">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
@@ -560,8 +581,7 @@
                                     viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
-                                </svg></i></span> <span class="footer-para">Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit.</span>
+                                </svg></i></span> <span class="footer-para">kalyan east, Thane</span>
                         <p><span class="footer-para">+919137104386</span></p>
                         <p><span class="footer-para">+sainathshitre7275@gmail.com</span></p>
                     </div>
