--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <div class="card-body">
                             <h3 class="head d-flex justify-content-center mt-4">Web Developement</h3>
                             <hr class="line">
-                            <p class="card-text text d-flex text-center mt-4">We provide with interactive and user friendly UI including full stack application.</p>
+                            <p class="card-text text d-flex text-center mt-4">We provide with interactive and user friendly websites and UI including full stack application.</p>
                         </div>
                     </div>
                 </div>
