--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col text-center mt-5">
                     <span class="hey mb-5">HEY! I AM</span>
                     <h1 class="myName">Sainath Shitre</h1>
-                    <p class="pclass">I'm a <span class="spanclass">Angular Developer</span></p>
+                    <p class="pclass">I'm an <span class="spanclass">Angular Developer</span></p>
                 </div>
             </div>
         </div>
